minor changes are now tracked

--- a/web/site/views/home.hbs
+++ b/web/site/views/home.hbs
@@ -68,7 +68,7 @@
       }
     }
   </style>
-  <title>Welcome to SECA</title>
+  <title>Welcome to JSEA</title>
 </head>
 
 <body>
@@ -89,13 +89,17 @@
     <div class="container">
       <div class="d-sm-flex align-items-center justify-content-between">
         <div>
-          <h1>Welcome to SECA - <span class="text-warning">Your Ultimate Event Companion</span></h1>
+          <h1>Welcome to JSEA - <span class="text-warning">Your Ultimate Event Companion</span></h1>
           <p class="lead my-4">
-            Discover and explore top events in your area. Whether you're looking for concerts, festivals, or local gatherings, SECA has you covered. Start your journey now!
+            Discover and explore top events in your area. Whether you're looking for concerts, festivals, or local gatherings, JSEA has you covered. Start your journey now!
           </p>
           <a class="btn btn-primary btn-lg" href="../private/register">Register for Free</a>
         </div>
-        <img class="img-fluid w-50 d-none d-sm-block" src="images/event.png" alt=""/>
+        <img
+            class="img-fluid w-50 d-none d-sm-block"
+            src="/images/event.png"
+            alt=""
+          />
       </div>
     </div>
   </section>
