--- a/web/site/views/home.hbs
+++ b/web/site/views/home.hbs
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-    
     .topnav {
       overflow: hidden;
-      background-color: #333;
+      background-color: #444; /* New color for the navigation bar */
     }
-
     .topnav a {
       float: left;
       display: block;
@@ -24,53 +20,59 @@
       text-decoration: none;
       font-size: 17px;
     }
-
     .topnav a:hover {
       background-color: #ddd;
       color: black;
     }
-
     .topnav a.active {
       background-color: #5404aa;
       color: white;
     }
-
     .topnav .icon {
       display: none;
     }
-
     @media screen and (max-width: 600px) {
       .topnav a:not(:first-child) {
         display: none;
       }
-
       .topnav a.icon {
         float: right;
         display: block;
       }
     }
-
     @media screen and (max-width: 600px) {
       .topnav.responsive {
         position: relative;
       }
-
       .topnav.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
       }
-
       .topnav.responsive a {
         float: none;
         display: block;
         text-align: left;
       }
     }
+
+    .showcase-gradient {
+      background: linear-gradient(to bottom, #ff7e5f, #feb47b); /* Example gradient colors */
+      color: #fff; /* Ensure text color is readable */
+    }
+
+    .popular-events-gradient {
+      background: linear-gradient(to bottom ,  #feb47b,#ff7e5f); /* Gradient from dark blue to a lighter shade */
+      color: #fff; /* Ensure text color is readable */
+    }
+
+    .newsletter {
+      background-color: #ffcc00; /* Bright background color */
+      color: #333; /* Dark text color */
+    }
   </style>
   <title>Welcome to JSEA</title>
 </head>
-
 <body>
   <!-- Navigation -->
   <div class="topnav" id="myTopnav">
@@ -85,29 +87,29 @@
   </div>
 
   <!-- Showcase -->
-  <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+  <section class="p-5 p-lg-0 pt-lg-5 text-center text-sm-start showcase-gradient">
     <div class="container">
       <div class="d-sm-flex align-items-center justify-content-between">
         <div>
-          <h1>Welcome to JSEA - <span class="text-warning">Your Ultimate Event Companion</span></h1>
+          <h1>Welcome to JSEA - <span class="text-info">Your Ultimate Event Companion</span></h1>
           <p class="lead my-4">
             Discover and explore top events in your area. Whether you're looking for concerts, festivals, or local gatherings, JSEA has you covered. Start your journey now!
           </p>
-          <a class="btn btn-primary btn-lg" href="../private/register">Register for Free</a>
-        </div>
-        <img
+          <a class="btn btn-info btn-lg" href="../private/register">Register for Free</a>
+          <img
             class="img-fluid w-50 d-none d-sm-block"
-            src="/images/event.png"
+            src="../public/images/event.png"
             alt=""
           />
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Upcoming Events Section -->
-  <section class="bg-dark text-light p-5">
+  <section class="p-5 popular-events-gradient">
     <div class="container mt-5">
-      <h1><span class="text-warning">Popular Events</span></h1>
+      <h1><span class="text-info">Popular Events</span></h1>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <!-- Placeholder event cards -->
         {{#each popularEvents}}
@@ -117,11 +119,8 @@
             <p class="text-muted">Name: {{this.eventName}}</p>
             <p class="text-muted">Date: {{this.eventDate}}</p>
             <div class="mt-auto">
-          <a
-            href="/site/public/oneEvent/{{this.EventId}}"
-            class="btn btn-primary"
-          >Details</a>
-</div>
+              <a href="/site/public/oneEvent/{{this.EventId}}" class="btn btn-info">Details</a>
+            </div>
           </div>
         </div>
         {{/each}}
@@ -131,7 +130,7 @@
   </section>
 
   <!-- Newsletter -->
-  <section class="bg-warning text-dark p-5">
+  <section class="bg-warning text-dark p-5 newsletter">
     <div class="container">
       <div class="d-md-flex justify-content-between align-items-center">
         <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
@@ -158,5 +157,4 @@
     }
   </script>
 </body>
-
 </html>
