--- a/web/site/views/home.hbs
+++ b/web/site/views/home.hbs
@@ -25,7 +25,7 @@
       color: black;
     }
     .topnav a.active {
-      background-color: #5404aa;
+      background-color: #128189;
       color: white;
     }
     .topnav .icon {
@@ -111,7 +111,7 @@
     <div class="container mt-5">
       <h1><span class="text-info">Popular Events</span></h1>
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <!-- Placeholder event cards -->
+        <!-- Placeholder  popular event cards -->
         {{#each popularEvents}}
         <div class="col">
           <div class="event-card bg-white p-4 h-100 d-flex flex-column">
