--- a/web/site/views/home.hbs
+++ b/web/site/views/home.hbs
@@ -62,13 +62,13 @@
     }
 
     .popular-events-gradient {
-      background: linear-gradient(to bottom ,  #feb47b,#ff7e5f); /* Gradient from dark blue to a lighter shade */
+      background: linear-gradient(to bottom, #feb47b, #ff7e5f); /* Gradient from dark blue to a lighter shade */
       color: #fff; /* Ensure text color is readable */
     }
 
     .newsletter {
-      background-color: #ffcc00; /* Bright background color */
-      color: #333; /* Dark text color */
+      background: linear-gradient(to right, #4facfe, #00f2fe); /* Blue gradient background */
+      color: #fff; /* White text color */
     }
   </style>
   <title>Welcome to JSEA</title>
